Module 2 completed – data cleaning & feature engineering
Added data validation, engineered sustainability and suitability scores,
and saved ranked material outputs for Module 2.

--- a/notebooks/module1_data_collection.ipynb
+++ b/notebooks/module1_data_collection.ipynb
@@ -97,10 +97,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fd4f36ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Materials dataset shape: (120, 10)\n",
+      "Products dataset shape: (175, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>material_id</th>\n",
+       "      <th>material_name</th>\n",
+       "      <th>strength_score</th>\n",
+       "      <th>weight_capacity_kg</th>\n",
+       "      <th>biodegradability_score</th>\n",
+       "      <th>co2_emission_kg</th>\n",
+       "      <th>recyclability_percent</th>\n",
+       "      <th>cost_per_unit_inr</th>\n",
+       "      <th>product_category</th>\n",
+       "      <th>used_for_products</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M001</td>\n",
+       "      <td>Single-wall corrugated cardboard</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>92</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>Shipping boxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M002</td>\n",
+       "      <td>Double-wall corrugated cardboard</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>Heavy-duty boxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M003</td>\n",
+       "      <td>Triple-wall corrugated cardboard</td>\n",
+       "      <td>10</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>88</td>\n",
+       "      <td>95</td>\n",
+       "      <td>Industrial</td>\n",
+       "      <td>Machinery packaging</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M004</td>\n",
+       "      <td>Kraft linerboard</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>90</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Outer cartons</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M005</td>\n",
+       "      <td>Test linerboard</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>85</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>Packaging cartons</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  material_id                     material_name  strength_score  \\\n",
+       "0        M001  Single-wall corrugated cardboard               8   \n",
+       "1        M002  Double-wall corrugated cardboard               9   \n",
+       "2        M003  Triple-wall corrugated cardboard              10   \n",
+       "3        M004                  Kraft linerboard               7   \n",
+       "4        M005                   Test linerboard               7   \n",
+       "\n",
+       "   weight_capacity_kg  biodegradability_score  co2_emission_kg  \\\n",
+       "0                  15                       9              1.6   \n",
+       "1                  20                       8              2.0   \n",
+       "2                  30                       7              2.5   \n",
+       "3                  12                       9              1.5   \n",
+       "4                  10                       8              1.8   \n",
+       "\n",
+       "   recyclability_percent  cost_per_unit_inr product_category  \\\n",
+       "0                     92                 55      Electronics   \n",
+       "1                     90                 75      Electronics   \n",
+       "2                     88                 95       Industrial   \n",
+       "3                     90                 50             Food   \n",
+       "4                     85                 48           Retail   \n",
+       "\n",
+       "     used_for_products  \n",
+       "0       Shipping boxes  \n",
+       "1     Heavy-duty boxes  \n",
+       "2  Machinery packaging  \n",
+       "3        Outer cartons  \n",
+       "4    Packaging cartons  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -118,10 +264,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "834de3f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>product_category</th>\n",
+       "      <th>product_weight_kg</th>\n",
+       "      <th>fragility_level</th>\n",
+       "      <th>required_strength_score</th>\n",
+       "      <th>preferred_biodegradability_score</th>\n",
+       "      <th>max_packaging_cost_inr</th>\n",
+       "      <th>temperature_sensitive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>P001</td>\n",
+       "      <td>Smartphone</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>High</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>100</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P002</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>High</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>260</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>P003</td>\n",
+       "      <td>Tablet</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>High</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>160</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>P004</td>\n",
+       "      <td>Smartwatch</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>90</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P005</td>\n",
+       "      <td>Bluetooth Earbuds</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>75</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  product_id       product_name product_category  product_weight_kg  \\\n",
+       "0       P001         Smartphone      Electronics               0.22   \n",
+       "1       P002             Laptop      Electronics               2.10   \n",
+       "2       P003             Tablet      Electronics               0.55   \n",
+       "3       P004         Smartwatch      Electronics               0.18   \n",
+       "4       P005  Bluetooth Earbuds      Electronics               0.12   \n",
+       "\n",
+       "  fragility_level  required_strength_score  preferred_biodegradability_score  \\\n",
+       "0            High                        7                                 7   \n",
+       "1            High                        8                                 7   \n",
+       "2            High                        7                                 7   \n",
+       "3          Medium                        6                                 7   \n",
+       "4          Medium                        6                                 7   \n",
+       "\n",
+       "   max_packaging_cost_inr temperature_sensitive  \n",
+       "0                     100                    No  \n",
+       "1                     260                    No  \n",
+       "2                     160                    No  \n",
+       "3                      90                    No  \n",
+       "4                      75                    No  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "products_df.head()\n"
    ]
@@ -280,7 +551,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.9"
   }
  },
