Module 2 completed – data cleaning & feature engineering
Added PostgreSQL integration, data cleaning checks, feature engineering,
and ranked sustainable packaging materials.

--- a/notebooks/module2_data_cleaning_feature_engineering.ipynb
+++ b/notebooks/module2_data_cleaning_feature_engineering.ipynb
@@ -25,6 +25,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "id": "9ed55cbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Connected to PostgreSQL successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# ✅ Update these values based on your pgAdmin settings\n",
+    "DB_USER = \"postgres\"\n",
+    "DB_PASSWORD = \"042006\"\n",
+    "DB_HOST = \"localhost\"\n",
+    "DB_PORT = \"5432\"\n",
+    "DB_NAME = \"ecopackai_db\"   # your database name\n",
+    "\n",
+    "engine = create_engine(\n",
+    "    f\"postgresql+psycopg2://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}\"\n",
+    ")\n",
+    "\n",
+    "print(\"✅ Connected to PostgreSQL successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "644639b0",
    "metadata": {},
