--- a/notebooks/04_summary_validation.ipynb
+++ b/notebooks/04_summary_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "8a41551d",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d90e452c",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fffe4e8a",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "(22, 19)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "064b008c",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7a65fc71",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "9ad70998",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "strength_norm                       0.728139      1.000000       1.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "2daf3d98",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "10          0.933070               0.564812  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "98105339",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
        "5                  PVC Plastic           Plastic                    0.495447"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,6 +572,41 @@
     "    ]\n",
     "].head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "54da1b4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['material_id', 'material_type', 'strength_mpa', 'weight_capacity',\n",
+       "       'co2_emission_per_kg', 'biodegradability_score', 'recyclability_pct',\n",
+       "       'cost_inr_per_kg', 'material_category', 'strength_level', 'co2_norm',\n",
+       "       'cost_norm', 'strength_norm', 'emission_score', 'recyclability_index',\n",
+       "       'co2_impact_index', 'cost_score', 'cost_efficiency_index',\n",
+       "       'material_suitability_score'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "materials.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d4b3d16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
