--- a/notebooks/03_feature_engineering.ipynb
+++ b/notebooks/03_feature_engineering.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e584d00b",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "42b10f5b",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        "Name: strength_level, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,15 +86,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3b37a008",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Normalize Co2, Cost and Strength fields to 0-1 scale\n",
-    "scaler = MinMaxScaler\n",
+    "# Normalize Co2, Cost and Strength fields\n",
+    "scaler = MinMaxScaler()\n",
     "\n",
-    "materials[\"co2_norm\",\"cost_norm\",\"strength_norm\"] = scaler.fit_transform(materials[[\"co2_emission_per_kg\",\"cost_inr_per_kg\",\"strength_mpa\"]])"
+    "materials[[\"co2_norm\",\"cost_norm\",\"strength_norm\"]] = scaler.fit_transform(materials[[\"co2_emission_per_kg\",\"cost_inr_per_kg\",\"strength_mpa\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aedd246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Emission Score\n",
+    "materials['emission_score'] = 1 - materials['co2_norm']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "be8f3ad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recyclability Index\n",
+    "materials['recyclability_index'] = materials['recyclability_pct'] / 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "517eb5be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Co2 Impact Index\n",
+    "materials['co2_impact_index'] = (\n",
+    "    0.50 * materials['emission_score'] +\n",
+    "    0.30 * materials['recyclability_index'] +\n",
+    "    0.20 * materials['biodegradability_score']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3e411cba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "materials['cost_score'] = 1 - materials['cost_norm']\n",
+    "\n",
+    "# Cost Efficiency Index \n",
+    "materials['cost_efficiency_index'] = (\n",
+    "    0.60 * materials['cost_score'] +\n",
+    "    0.40 * materials['strength_norm']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "64f23d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Material Suitability Score\n",
+    "materials['material_suitability_score'] = (\n",
+    "    0.45 * materials['co2_impact_index'] +\n",
+    "    0.35 * materials['cost_efficiency_index'] +\n",
+    "    0.10 * materials['recyclability_index'] +\n",
+    "    0.10 * materials['strength_norm']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ef5e59aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>co2_impact_index</th>\n",
+       "      <th>cost_efficiency_index</th>\n",
+       "      <th>material_suitability_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.699825</td>\n",
+       "      <td>0.494914</td>\n",
+       "      <td>0.583151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.635439</td>\n",
+       "      <td>0.476154</td>\n",
+       "      <td>0.524806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.635439</td>\n",
+       "      <td>0.479552</td>\n",
+       "      <td>0.527598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.662895</td>\n",
+       "      <td>0.503086</td>\n",
+       "      <td>0.570204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.674211</td>\n",
+       "      <td>0.506651</td>\n",
+       "      <td>0.567536</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   co2_impact_index  cost_efficiency_index  material_suitability_score\n",
+       "0          0.699825               0.494914                    0.583151\n",
+       "1          0.635439               0.476154                    0.524806\n",
+       "2          0.635439               0.479552                    0.527598\n",
+       "3          0.662895               0.503086                    0.570204\n",
+       "4          0.674211               0.506651                    0.567536"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "materials[[\"co2_impact_index\",\"cost_efficiency_index\",\"material_suitability_score\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b1d70721",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Engineering Data Exported Successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "materials.to_csv(\"E:/Data Science/EcoPackAI/data/processed/materials_featured.csv\", index=False)\n",
+    "\n",
+    "print(\"Feature Engineering Data Exported Successfully\")"
    ]
   }
  ],
