--- a/notebooks/02_data_cleaning.ipynb
+++ b/notebooks/02_data_cleaning.ipynb
@@ -269,6 +269,121 @@
     "\n",
     "print(\"Data Cleaning completed successfully.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7fb3c180",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting psycopg2\n",
+      "  Downloading psycopg2-2.9.11-cp312-cp312-win_amd64.whl.metadata (5.1 kB)\n",
+      "Downloading psycopg2-2.9.11-cp312-cp312-win_amd64.whl (2.7 MB)\n",
+      "   ---------------------------------------- 0.0/2.7 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/2.7 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.0/2.7 MB 487.6 kB/s eta 0:00:06\n",
+      "   ----- ---------------------------------- 0.4/2.7 MB 3.5 MB/s eta 0:00:01\n",
+      "   ---------------- ----------------------- 1.1/2.7 MB 7.2 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 1.9/2.7 MB 9.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  2.7/2.7 MB 10.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.7/2.7 MB 9.6 MB/s eta 0:00:00\n",
+      "Installing collected packages: psycopg2\n",
+      "Successfully installed psycopg2-2.9.11\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7ccf969a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database Connected\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "conn = psycopg2.connect(\n",
+    "    dbname = \"ecopack_ai\",\n",
+    "    user = \"postgres\",\n",
+    "    password = \"Manikanta@3\",\n",
+    "    host = \"localhost\",\n",
+    "    port = \"5432\"\n",
+    ")\n",
+    "\n",
+    "print(\"Database Connected\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "21c5cd9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(22,)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = conn.cursor()\n",
+    "\n",
+    "query.execute(\"SELECT COUNT(*) FROM materials;\")\n",
+    "print(query.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "55fae6ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('PRD0001', 'Dabur Body Wash 400 ml v2', 'Personal Care', Decimal('400.00'), Decimal('422.27'), Decimal('221.40'), 'Low', 'Low', 'Medium', 720, 'Pouch', 'LDPE Plastic')\n",
+      "('PRD0002', 'NestlÃ© Namkeen 200 g', 'Food', Decimal('200.00'), Decimal('410.27'), Decimal('47.69'), 'Low', 'Low', 'Medium', 240, 'Wrapper', 'LDPE Plastic')\n",
+      "('PRD0003', 'Sugar Cosmetics Cream 100 g', 'Cosmetics', Decimal('100.00'), Decimal('161.27'), Decimal('120.50'), 'Low', 'Low', 'Medium', 720, 'Tube', 'HDPE Plastic')\n",
+      "('PRD0004', 'Patanjali Rice 5000 g', 'Grocery', Decimal('5000.00'), Decimal('8920.73'), Decimal('324.28'), 'Low', 'Low', 'Low', 365, 'Bag', 'Kraft Paper (Unbleached)')\n",
+      "('PRD0005', 'Milky Mist Buttermilk 500 ml', 'Dairy', Decimal('500.00'), Decimal('571.71'), Decimal('22.94'), 'Medium', 'High', 'High', 7, 'Pouch', 'HDPE Plastic')\n"
+     ]
+    }
+   ],
+   "source": [
+    "query.execute(\"SELECT * FROM products LIMIT 5;\")\n",
+    "rows = query.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
